--- a/web-resume.tex
+++ b/web-resume.tex
@@ -58,7 +58,7 @@
     \begin{compactitem}
       \item Proficient with jQuery library.
       \item Highly proficient with unobtrusive javascript techniques.
-      \item Developed ajax\_resource javascript library, a javascript implementation of REST resources.
+      \item Developed ajax\_resource javascript library, a javascript implementation of REST resources (\url{http://github.com/ratnikov/ajax_resource/tree})
     \end{compactitem}
 
   \item Testing:
@@ -66,6 +66,7 @@
       \item 10 months work experience of Test Driven Development using Shoulda testing framework.
       \item Extended Shoulda to utilize setup - evaluate - check/should workflow.
       \item Utilized cucumber (webrat + selenium) for integration testing.
+      \item Javascript unit testing using QTest.
     \end{compactitem}
 
   \item Highly proficient with RESTful web application design.
