Changed working to be a developer (sounds heftier... =/ )

--- a/web-resume.tex
+++ b/web-resume.tex
@@ -77,7 +77,7 @@
 \subsection{Other}
 \begin{compactitem}
   \item Proficient using Git and Subversion.
-  \item Long time Linux user (Ubuntu, Archlinux, Redhat).
+  \item Long time Linux developer (Ubuntu, Archlinux, Redhat).
   \item 4 years of Java experience.
   \item 7 years of C++ experience.
 \end{compactitem}
