Fixed QTest -> QUnit

--- a/web-resume.tex
+++ b/web-resume.tex
@@ -66,7 +66,7 @@
       \item 10 months work experience of Test Driven Development using Shoulda testing framework.
       \item Extended Shoulda to utilize setup - evaluate - check/should workflow.
       \item Utilized cucumber (webrat + selenium) for integration testing.
-      \item Javascript unit testing using QTest.
+      \item Javascript unit testing using QUnit.
     \end{compactitem}
 
   \item Highly proficient with RESTful web application design.
