--- a/web-resume.tex
+++ b/web-resume.tex
@@ -49,7 +49,7 @@
   \item Ruby on Rails:
     \begin{compactitem}
       \item 15 months of rails work experience.
-      \item Have contributed a patch to the rails core.
+      \item Have had a patch accepted by Rails core.
       \item Extracted and customized various rails plugins and gems.
       \item Proficient with ruby core language.
     \end{compactitem}
