MKentioned the database experience (thanks elad!)

--- a/web-resume.tex
+++ b/web-resume.tex
@@ -78,6 +78,7 @@
 \begin{compactitem}
   \item Proficient using Git and Subversion.
   \item Long time Linux developer (Ubuntu, Archlinux, Redhat).
+  \item Experienced with MySQL and SQlite3 databases.
   \item 4 years of Java experience.
   \item 7 years of C++ experience.
 \end{compactitem}
