Updated to include mention of the webitects.com site.
Reworded the patching thing to reference bugmash patch as well

--- a/web-resume.tex
+++ b/web-resume.tex
@@ -23,6 +23,7 @@
 \affiliation{Web Developer at Webitects, Inc}{February 2008 - Present}
 \begin{compactitem}
   \item Lead developer for www.communitycollab.org social networking portal.
+  \item Lead developer for the www.webitects.com website.
   \item Maintaining Subversion and Git code repositories.
   \item Maintaining a small number of VirtualBox staging servers.
 \end{compactitem}
@@ -49,7 +50,7 @@
   \item Ruby on Rails:
     \begin{compactitem}
       \item 15 months of rails work experience.
-      \item Have had a patch accepted by Rails core.
+      \item Contributed 2 patches to rails-core.
       \item Extracted and customized various rails plugins and gems.
       \item Proficient with ruby core language.
     \end{compactitem}
