Updated the wording.

--- a/web-resume.tex
+++ b/web-resume.tex
@@ -25,7 +25,7 @@
   \item Lead developer for www.communitycollab.org social networking portal.
   \item Lead developer for the www.webitects.com website.
   \item Maintaining Subversion and Git code repositories.
-  \item Maintaining a small number of VirtualBox staging servers.
+  \item Created a dynamic, virtualized staging environment built on VirtualBox 
 \end{compactitem}
 
 \section{Internships}
