Altered the wording (thanks fowlduck!)
Also fixed to fit one page

--- a/web-resume.tex
+++ b/web-resume.tex
@@ -22,10 +22,10 @@
 
 \affiliation{Web Developer at Webitects, Inc}{February 2008 - Present}
 \begin{compactitem}
-  \item Lead developer for www.communitycollab.org social networking portal.
+  \item Lead developer for www.communitycollab.org social networking portal with 500+ users.
   \item Lead developer for the www.webitects.com website.
   \item Maintaining Subversion and Git code repositories.
-  \item Created a dynamic, virtualized staging environment built on VirtualBox 
+  \item Created a dynamic, virtualized staging environment built on VirtualBox.
 \end{compactitem}
 
 \section{Internships}
@@ -50,7 +50,7 @@
   \item Ruby on Rails:
     \begin{compactitem}
       \item 15 months of rails work experience.
-      \item Contributed 2 patches to rails-core.
+      \item Rails Contributer with 3 patches (http://bit.ly/h7lRx)
       \item Extracted and customized various rails plugins and gems.
       \item Proficient with ruby core language.
     \end{compactitem}
@@ -59,7 +59,7 @@
     \begin{compactitem}
       \item Proficient with jQuery library.
       \item Highly proficient with unobtrusive javascript techniques.
-      \item Developed ajax\_resource javascript library, a javascript implementation of REST resources (\url{http://github.com/ratnikov/ajax_resource/tree})
+      \item Developed ajax\_resource javascript library, a javascript implementation of REST resources (\url{http://bit.ly/tAk7b})
     \end{compactitem}
 
   \item Testing:
@@ -71,15 +71,14 @@
     \end{compactitem}
 
   \item Highly proficient with RESTful web application design.
-  \item Used Sphinx for website text-search of www.communitycollab.org.
   \item Used both Mongrel cluster and Passenger deployments.
+  \item Used MySQL database in production with Sphinx full text searching.
 \end{compactitem}
 
 \subsection{Other}
 \begin{compactitem}
   \item Proficient using Git and Subversion.
   \item Long time Linux developer (Ubuntu, Archlinux, Redhat).
-  \item Experienced with MySQL and SQlite3 databases.
   \item 4 years of Java experience.
   \item 7 years of C++ experience.
 \end{compactitem}
