Updated the address

--- a/web-resume.tex
+++ b/web-resume.tex
@@ -7,8 +7,8 @@
 \author{Dmitry Ratnikov}
 \email{ratnikov@gmail.com}
 \phone{(630) 885-0925}
-\streetaddress{3449 S Leavitt St, Apt 2}
-\citystatezip{Chicago, IL 60608}
+\streetaddress{834 W Bradley Pl, Apt 1}
+\citystatezip{Chicago, IL 60613}
 \maketitle
 
 \section{Education}
