--- a/web-resume.tex
+++ b/web-resume.tex
@@ -22,9 +22,9 @@
 
 \affiliation{Web Developer at Webitects, Inc}{February 2008 - Present}
 \begin{compactitem}
-  \item Lead developer for www.communitycollab.org social networking portal with 500+ users.
-  \item Lead developer for the www.webitects.com website.
-  \item Maintaining Subversion and Git code repositories.
+  \item Lead developer for communitycollab.org social networking portal with 500+ users.
+  \item Lead developer of webitects.com, which we built in 3 weeks.
+  \item Maintained Subversion and Git code repositories.
   \item Created a dynamic, virtualized staging environment built on VirtualBox.
 \end{compactitem}
 
