Ran through spell check.

--- a/web-resume.tex
+++ b/web-resume.tex
@@ -50,7 +50,7 @@
   \item Ruby on Rails:
     \begin{compactitem}
       \item 15 months of rails work experience.
-      \item Rails Contributer with 3 patches (http://bit.ly/h7lRx)
+      \item Rails Contributor with 3 patches (http://bit.ly/h7lRx)
       \item Extracted and customized various rails plugins and gems.
       \item Proficient with ruby core language.
     \end{compactitem}
