Removed 'we' following Reva's suggestion

--- a/web-resume.tex
+++ b/web-resume.tex
@@ -23,7 +23,7 @@
 \affiliation{Web Developer at Webitects, Inc}{February 2008 - Present}
 \begin{compactitem}
   \item Lead developer for communitycollab.org social networking portal with 500+ users.
-  \item Lead developer of webitects.com, which we built in 3 weeks.
+  \item Lead developer of webitects.com, which was built in 3 weeks.
   \item Maintained Subversion and Git code repositories.
   \item Created a dynamic, virtualized staging environment built on VirtualBox.
 \end{compactitem}
