--- a/web-resume.tex
+++ b/web-resume.tex
@@ -33,13 +33,13 @@
 \affiliation{Fermilab Computing Division}{May 2006 - August 2006, May 2007 - August 2007}
 \begin{compactitem}
   \item Created TablePlotter web interface to generate statistics plots of database data using Tomcat JSP implementation.
-  \item Used Google Web Toolkit to implement the client interface.
+  \item Implemented client user interface using Google Web Toolkit.
 \end{compactitem}
 
 \affiliation{Argonne National Laboratory}{August 2005 - May 2006}
 \begin{compactitem}
-  \item Conducted research on applicability of aspect-oriented design practices to MySQL database patching.
-  \item Conducted an evaluation of FroNTier Distributed Database project usage in the ATLAS experiment at CERN.
+  \item Researched on applicability of aspect-oriented design practices to MySQL database patching.
+  \item Evaluated of FroNTier Distributed Database project usage in the ATLAS experiment at CERN.
 \end{compactitem}
 
 \section{Skills}
