First take on the updates rails resume

--- a/rails-resume.tex
+++ b/rails-resume.tex
@@ -28,18 +28,18 @@
   \item Created a dynamic, virtualized staging environment built on VirtualBox.
 \end{compactitem}
 
-\section{Internships}
-
-\affiliation{Fermilab Computing Division}{May 2006 - August 2006, May 2007 - August 2007}
+\section{Side projects}
+\affiliation{Opendata (http://opendata.heroku.com)}{October 2009 - Present}
 \begin{compactitem}
-  \item Created TablePlotter web interface to generate statistics plots of database data using Tomcat JSP implementation.
-  \item Implemented client user interface using Google Web Toolkit.
+  \item Developing a system to import and store public data with a JSON API.
+  \item Developing applications to provide visualization of the stored data to the users.
+  \item Currently maintaining 15 years of donation data for Illinois elections.
 \end{compactitem}
 
-\affiliation{Argonne National Laboratory}{August 2005 - May 2006}
+\affiliation{Potholes}{October 2009 - Present}
 \begin{compactitem}
-  \item Researched on applicability of aspect-oriented design practices to MySQL database patching.
-  \item Evaluated of FroNTier Distributed Database project usage in the ATLAS experiment at CERN.
+  \item Tracks pothole information uploaded by users via twitpic service.
+  \item Allows interested parties to verify and report potholes via official channels.
 \end{compactitem}
 
 \section{Skills}
