Redid the experience section. Minor wording edits

--- a/web-resume.tex
+++ b/web-resume.tex
@@ -32,7 +32,7 @@
 
 \affiliation{Fermilab Computing Division}{May 2006 - August 2007, May 2007 - August 2007}
 \begin{compactitem}
-  \item Created TablePlotter web interface to generate statistics plots of database data using Tomact SP implementation.
+  \item Created TablePlotter web interface to generate statistics plots of database data using Tomcat JSP implementation.
   \item Implemented client user interface using Google Web Toolkit.
 \end{compactitem}
 
@@ -46,13 +46,13 @@
 \affiliation{Opendata (http://opendata.heroku.com)}{October 2009 - Present}
 \begin{compactitem}
   \item Developing a system to import and store public data with a JSON API.
-  \item Developing applications to provide visualization of the stored data to the users.
+  \item Developing applications to provide visualization of the stored data.
   \item Currently maintaining 15 years of donation data for Illinois elections.
 \end{compactitem}
 
-\affiliation{Potholes}{October 2009 - Present}
+\affiliation{Potholes (http://pothole.heroku.com)}{October 2009 - Present}
 \begin{compactitem}
-  \item Tracks pothole information uploaded by users via twitpic service.
+  \item Imports pothole information uploaded by users via twitpic service.
   \item Allows interested parties to verify and report potholes via official channels.
 \end{compactitem}
 
@@ -62,19 +62,22 @@
 
 \begin{compactitem}
   \item 15 months of Ruby on Rails work experience with 3 patch contributions (http://bit.ly/h7lRx)
-  \item Highly proficient unobtrusive javascript and jQuery library.
-  \item Highly proficient with javascript and ruby unit testing.
-  \item Highly proficient with blackbox testing with cucumber and selenium.
-  
-  \item Proficient using Sphinx full text searching.
-  \item Familiar with Google Web Toolkit with Apache Tomcat.
+  \item 2 years of javascript experience, including jQuery and unobtrusive javascript techniques.
+  \item 4 years of java experience including Apache Tomcat and Google Web Toolkit technologies.
+\end{compactitem}
+
+\subsection{Testing}
+\begin{compactitem}
+  \item Highly proficient with ruby unit testing (shoulda and rspec)
+  \item Highly proficient with javascript unit testing (QUnit and Screw-Unit)
+  \item Highly proficient with blackbox acceptance testing using cucumber + selenium.
 \end{compactitem}
 
 \subsection{Other}
 \begin{compactitem}
   \item Proficient using Git and Subversion.
+  \item Used Sphinx to provide full text searching.
   \item Long time Linux developer (Ubuntu, Archlinux, Redhat).
-  \item 4 years of Java experience.
   \item 7 years of C++ experience.
 \end{compactitem}
 
