Edited the resume to add html experience

--- a/rails-resume.tex
+++ b/rails-resume.tex
@@ -50,16 +50,16 @@
   \item Ruby on Rails:
     \begin{compactitem}
       \item 15 months of rails work experience.
-      \item Rails Contributor with 3 patches (http://bit.ly/h7lRx)
+      \item Rails Contributor with 3 patches \mbox{(http://bit.ly/h7lRx)}.
       \item Extracted and customized various rails plugins and gems.
       \item Proficient with ruby core language.
     \end{compactitem}
 
   \item Javascript:
     \begin{compactitem}
-      \item Proficient with jQuery library.
-      \item Highly proficient with unobtrusive javascript techniques.
-      \item Developed ajax\_resource javascript library, a javascript implementation of REST resources (\url{http://bit.ly/tAk7b})
+      \item Proficient with jQuery library and unobtrusive javascript techniques.
+      \item Proficient with object-oriented programming using prototypal inheritance.
+      \item Developed a javascript library for simple REST resources manipulation \mbox{(\url{http://bit.ly/tAk9b})}.
     \end{compactitem}
 
   \item Testing:
@@ -71,6 +71,7 @@
     \end{compactitem}
 
   \item Highly proficient with RESTful web application design.
+  \item Fluent in (X)HTML and CSS.
   \item Used both Mongrel cluster and Passenger deployments.
   \item Used MySQL database in production with Sphinx full text searching.
 \end{compactitem}
