Reworded a little bit

--- a/rails-resume.tex
+++ b/rails-resume.tex
@@ -57,17 +57,17 @@
 
   \item Javascript:
     \begin{compactitem}
-      \item Proficient with jQuery library and unobtrusive javascript techniques.
-      \item Proficient with object-oriented programming using prototypal inheritance.
+      \item Highly proficient with jQuery library and unobtrusive javascript techniques.
+      \item Highly proficient with object-oriented programming using prototypal inheritance.
       \item Developed a javascript library for simple REST resources manipulation \mbox{(\url{http://bit.ly/tAk9b})}.
     \end{compactitem}
 
   \item Testing:
     \begin{compactitem}
-      \item 10 months work experience of Test Driven Development using Shoulda testing framework.
+      \item Extensive work experience of Test Driven Development using Shoulda testing framework.
       \item Extended Shoulda to utilize setup - evaluate - check/should workflow.
       \item Utilized cucumber (webrat + selenium) for integration testing.
-      \item Javascript unit testing using QUnit.
+      \item Javascript unit testing using QUnit and Screw-Unit.
     \end{compactitem}
 
   \item Highly proficient with RESTful web application design.
