Joined the internships with work experience

--- a/web-resume.tex
+++ b/web-resume.tex
@@ -28,15 +28,13 @@
   \item Created a dynamic, virtualized staging environment built on VirtualBox.
 \end{compactitem}
 
-\section{Internships}
-
-\affiliation{Fermilab Computing Division}{May 2006 - August 2007, May 2007 - August 2007}
+\affiliation[(Internship)]{Fermilab Computing Division}{May 2006 - August 2007, May 2007 - August 2007}
 \begin{compactitem}
   \item Created TablePlotter web interface to generate statistics plots of database data using Tomcat JSP implementation.
   \item Implemented client user interface using Google Web Toolkit.
 \end{compactitem}
 
-\affiliation{Argonne National Laboratory}{August 2005 - May 2006}
+\affiliation[(Intersnhip)]{Argonne National Laboratory}{August 2005 - May 2006}
 \begin{compactitem}
   \item Researched on applicability of aspect-riented design practices to MySQL database patching.
   \item Evaluated FrONTier Distributed Database project usage in the ATLAS experience at CERN.
