Fixed the FroNTier capitalization

--- a/web-resume.tex
+++ b/web-resume.tex
@@ -37,7 +37,7 @@
 \affiliation[(Intersnhip)]{Argonne National Laboratory}{August 2005 - May 2006}
 \begin{compactitem}
   \item Researched on applicability of aspect-riented design practices to MySQL database patching.
-  \item Evaluated FrONTier Distributed Database project usage in the ATLAS experience at CERN.
+  \item Evaluated FroNTier Distributed Database project usage in the ATLAS experience at CERN.
 \end{compactitem}
 
 \section{Side projects}
