Capitalized the Side Projects

--- a/web-resume.tex
+++ b/web-resume.tex
@@ -40,7 +40,7 @@
   \item Evaluated FroNTier Distributed Database project usage in the ATLAS experience at CERN.
 \end{compactitem}
 
-\section{Side projects}
+\section{Side Projects}
 \affiliation{Opendata (http://opendata.heroku.com)}{October 2009 - Present}
 \begin{compactitem}
   \item Developing a system to import and store public data with a JSON API.
