Changed 15 months to 2 years of rails exp

--- a/rails-resume.tex
+++ b/rails-resume.tex
@@ -49,7 +49,7 @@
 \begin{compactitem}
   \item Ruby on Rails:
     \begin{compactitem}
-      \item 15 months of rails work experience.
+      \item 2 years of rails work experience.
       \item Rails Contributor with 3 patches \mbox{(http://bit.ly/h7lRx)}.
       \item Extracted and customized various rails plugins and gems.
       \item Proficient with ruby core language.
