Fixed typos and grammatical errors

--- a/web-resume.tex
+++ b/web-resume.tex
@@ -34,9 +34,9 @@
   \item Implemented client user interface using Google Web Toolkit.
 \end{compactitem}
 
-\affiliation[(Intersnhip)]{Argonne National Laboratory}{August 2005 - May 2006}
+\affiliation[(Internship)]{Argonne National Laboratory}{August 2005 - May 2006}
 \begin{compactitem}
-  \item Researched on applicability of aspect-riented design practices to MySQL database patching.
+  \item Researched on applicability of aspect-oriented design practices to MySQL database patching.
   \item Evaluated FroNTier Distributed Database project usage in the ATLAS experience at CERN.
 \end{compactitem}
 
@@ -69,7 +69,7 @@
 \begin{compactitem}
   \item Highly proficient with ruby unit testing (shoulda and rspec)
   \item Highly proficient with javascript unit testing (QUnit and Screw-Unit)
-  \item Highly proficient with blackbox acceptance testing using cucumber + selenium.
+  \item Highly proficient with black-box acceptance testing using cucumber + selenium.
 \end{compactitem}
 
 \subsection{Other}
