--- a/web-resume.tex
+++ b/web-resume.tex
@@ -59,7 +59,7 @@
 \subsection{Web development}
 
 \begin{compactitem}
-  \item 15 months of Ruby on Rails work experience with 3 patch contributions (http://bit.ly/h7lRx)
+  \item 2 years of Ruby on Rails work experience with 3 patch contributions (http://bit.ly/h7lRx)
   \item 2 years of javascript experience, including jQuery and unobtrusive javascript techniques and prototypal inheritance.
   \item 4 years of java experience including Apache Tomcat and Google Web Toolkit technologies.
   \item Fluent in (X)HTML and CSS
