Updated the resume.

--- a/rails-resume.tex
+++ b/rails-resume.tex
@@ -22,6 +22,7 @@
 
 \affiliation{Web Developer at Webitects, Inc}{February 2008 - Present}
 \begin{compactitem}
+  \item Developer of my.seiu.org networking portal based on Community-Engine platform.
   \item Lead developer for communitycollab.org social networking portal with 500+ users.
   \item Lead developer of webitects.com, which was built in 3 weeks.
   \item Maintained Subversion and Git code repositories.
@@ -36,10 +37,10 @@
   \item Currently maintaining 15 years of donation data for Illinois elections.
 \end{compactitem}
 
-\affiliation{Potholes}{October 2009 - Present}
+\affiliation{Potholes (http://potholetracker.com)}{October 2009 - Present}
 \begin{compactitem}
   \item Tracks pothole information uploaded by users via twitpic service.
-  \item Allows interested parties to verify and report potholes via official channels.
+  \item Provides automatic geocoding of potholes based on tweet text.
 \end{compactitem}
 
 \section{Skills}
@@ -49,25 +50,24 @@
 \begin{compactitem}
   \item Ruby on Rails:
     \begin{compactitem}
-      \item 15 months of rails work experience.
-      \item Rails Contributor with 3 patches \mbox{(http://bit.ly/h7lRx)}.
+      \item 2 years of rails work experience; contributed to rails core \mbox{(http://bit.ly/6Xe890)}.
       \item Extracted and customized various rails plugins and gems.
-      \item Proficient with ruby core language.
+      \item Proficient with ruby core language and familiar with ruby internals.
     \end{compactitem}
 
   \item Javascript:
     \begin{compactitem}
       \item Highly proficient with jQuery library and unobtrusive javascript techniques.
       \item Highly proficient with object-oriented programming using prototypal inheritance.
-      \item Developed a javascript library for simple REST resources manipulation \mbox{(\url{http://bit.ly/tAk9b})}.
+      \item Developed a javascript library for simple REST resources manipulation \mbox{(\url{http://bit.ly/7R0AcJ})}.
     \end{compactitem}
 
   \item Testing:
     \begin{compactitem}
-      \item Extensive work experience of Test Driven Development using Shoulda testing framework.
+      \item Extensive work experience with both Shoulda and RSpec testing frameworks.
       \item Extended Shoulda to utilize setup - evaluate - check/should workflow.
       \item Utilized cucumber (webrat + selenium) for integration testing.
-      \item Javascript unit testing using QUnit and Screw-Unit.
+      \item Javascript unit testing using QUnit and Screw-Unit (blue-ridge).
     \end{compactitem}
 
   \item Highly proficient with RESTful web application design.
