Incorporated editings by Dona.

--- a/rails-resume.tex
+++ b/rails-resume.tex
@@ -24,7 +24,7 @@
 \begin{compactitem}
   \item Developer of my.seiu.org networking portal based on Community-Engine platform.
   \item Lead developer for communitycollab.org social networking portal with 500+ users.
-  \item Lead developer of webitects.com, which was built in 3 weeks.
+  \item Lead developer for webitects.com, which was built in 3 weeks.
   \item Maintained Subversion and Git code repositories.
   \item Created a dynamic, virtualized staging environment built on VirtualBox.
 \end{compactitem}
@@ -33,7 +33,7 @@
 \affiliation{Opendata (http://opendata.heroku.com)}{October 2009 - Present}
 \begin{compactitem}
   \item Developing a system to import and store public data with a JSON API.
-  \item Developing applications to provide visualization of the stored data to the users.
+  \item Developing applications to provide visualization of the stored data to users.
   \item Currently maintaining 15 years of donation data for Illinois elections.
 \end{compactitem}
 
@@ -79,7 +79,7 @@
 \subsection{Other}
 \begin{compactitem}
   \item Proficient using Git and Subversion.
-  \item Long time Linux developer (Ubuntu, Archlinux, Redhat).
+  \item Long-time Linux developer (Ubuntu, Archlinux, Redhat).
   \item 4 years of Java experience.
   \item 7 years of C++ experience.
 \end{compactitem}
