Updated wording and added programming competition experience.

--- a/web-resume.tex
+++ b/web-resume.tex
@@ -23,7 +23,7 @@
 \affiliation{Web Developer at Webitects, Inc}{February 2008 - Present}
 \begin{compactitem}
   \item Lead developer for communitycollab.org social networking portal with 500+ users.
-  \item Lead developer of webitects.com, which was built in 3 weeks.
+  \item Lead developer for webitects.com, which was built in 3 weeks.
   \item Maintained Subversion and Git code repositories.
   \item Created a dynamic, virtualized staging environment built on VirtualBox.
 \end{compactitem}
@@ -50,8 +50,8 @@
 
 \affiliation{Potholes (http://pothole.heroku.com)}{October 2009 - Present}
 \begin{compactitem}
-  \item Imports pothole information uploaded by users via twitpic service.
-  \item Allows interested parties to verify and report potholes via official channels.
+  \item Tracks pothole information uploaded by users via twitpic service.
+  \item Provides automatic geocoding of potholes based on tweet text.
 \end{compactitem}
 
 \section{Skills}
@@ -77,7 +77,8 @@
   \item Proficient using Git and Subversion.
   \item Used Sphinx to provide full text searching.
   \item Long time Linux developer (Ubuntu, Archlinux, Redhat).
-  \item 7 years of C++ experience.
+  \item Member of IIT ICPC competition team for 4 years (Mid-Central USA region).
+  \item 4 years Java experience; 7 years of C++ experience.
 \end{compactitem}
 
 \end{document}
