Fixed the 'dynamic' part

--- a/web-resume.tex
+++ b/web-resume.tex
@@ -25,7 +25,7 @@
   \item Lead developer for communitycollab.org social networking portal with 500+ users.
   \item Lead developer for webitects.com, which was built in 3 weeks.
   \item Maintained Subversion and Git code repositories.
-  \item Created a dynamic, virtualized staging environment built on VirtualBox.
+  \item Created a virtualized staging environment built on VirtualBox.
 \end{compactitem}
 
 \affiliation[(Internship)]{Fermilab Computing Division}{May 2006 - August 2007, May 2007 - August 2007}
