Added MySEIU project... updated webitects stuff

--- a/web-resume.tex
+++ b/web-resume.tex
@@ -22,8 +22,9 @@
 
 \affiliation{Web Developer at Webitects, Inc}{February 2008 - Present}
 \begin{compactitem}
-  \item Lead developer for communitycollab.org social networking portal with 500+ users.
-  \item Lead developer for webitects.com, which was built in 3 weeks.
+  \item Co-developer for My.SEIU.org organizational portal.
+  \item Lead developer for webitects.com, a CMS site with a built-in blog.
+  \item Lead developer for communitycollab.org social networking portal.
   \item Maintained Subversion and Git code repositories.
   \item Created a virtualized staging environment built on VirtualBox.
 \end{compactitem}
