--- a/roman-resume.tex
+++ b/roman-resume.tex
@@ -17,9 +17,9 @@
 
 \begin{compactitem}
   \item 2 years of Ruby on Rails work experience with 3 patch contributions (http://bit.ly/h7lRx).
-  \item 2 years of javascript experience: jQuery, unobtrusive javascript, and prototypal inheritance.
-  \item 4 years of java experience including Apache Tomcat and Google Web Toolkit.
-  \item 7 years of C++ experience.
+  \item 2 years of javascript work experience: jQuery, unobtrusive javascript, and prototypal inheritance.
+  \item Proficient with Java, including Apache Tomcat and Google Web Toolkit.
+  \item Proficient with C++.
   \\
   \item Highly proficient with ruby and javascript unit testing and black-box acceptance testing.
   \item Fluent in (X)HTML and CSS.
