Added techs. Redid mention of git/subversion

--- a/roman-resume.tex
+++ b/roman-resume.tex
@@ -23,7 +23,7 @@
   \\
   \item Highly proficient with ruby and javascript unit testing and black-box acceptance testing.
   \item Fluent in (X)HTML and CSS.
-  \item Proficient using Git.
+  \item Maintained Git and Subversion code repositories.
   \item Used Sphinx to provide full text searching.
 \end{compactitem}
 
@@ -34,9 +34,10 @@
   \item Co-developer for My.SEIU.org organizational portal.
   \item Lead developer for webitects.com, a CMS site with a built-in blog.
   \item Lead developer for communitycollab.org social networking portal.
-  \item Maintained Subversion and Git code repositories.
   \item Created a virtualized staging environment built on VirtualBox.
 \end{compactitem}
+
+\techs{Ruby on Rails, Javascript, Sphinx, Git}
 
 \affiliation[(Internship)]{Fermilab Computing Division}{May 2006 - August 2007, May 2007 - August 2007}
 \begin{compactitem}
@@ -44,11 +45,15 @@
   \item Implemented client user interface using Google Web Toolkit.
 \end{compactitem}
 
+\techs{Java, GWT, Tomcat, Subversion}
+
 \affiliation[(Internship)]{Argonne National Laboratory}{August 2005 - May 2006}
 \begin{compactitem}
   \item Researched on applicability of aspect-oriented design practices to MySQL database patching.
   \item Evaluated FroNTier Distributed Database project usage in the ATLAS experience at CERN.
 \end{compactitem}
+
+\techs{MySQL, C}
 
 \section{Independent Projects}
 \affiliation{Opendata (http://opendata.heroku.com)}{October 2009 - Present}
@@ -61,6 +66,8 @@
 \begin{compactitem}
   \item Tracks pothole information uploaded by users via twitpic service with automatic geocoding.
 \end{compactitem}
+
+\techs{Rails, Javascript, Twitter API}
 
 \section{Education}
 
