Fixed Rails -> Ruby on Rails

--- a/roman-resume.tex
+++ b/roman-resume.tex
@@ -67,7 +67,7 @@
   \item Tracks pothole information uploaded by users via twitpic service with automatic geocoding.
 \end{compactitem}
 
-\techs{Rails, Javascript, Twitter API}
+\techs{Ruby on Rails, Javascript, Twitter API}
 
 \section{Education}
 
