Condensed 'work experience' -> 'experience'

--- a/google-resume.tex
+++ b/google-resume.tex
@@ -16,8 +16,8 @@
 \subsection{}
 
 \begin{compactitem}
-  \item 2 years of Ruby on Rails work experience with 3 patch contributions (http://bit.ly/h7lRx).
-  \item 2 years of javascript work experience: jQuery, unobtrusive javascript, and prototypal inheritance.
+  \item 2 years of Ruby on Rails experience with 3 patch contributions (http://bit.ly/h7lRx).
+  \item 2 years of javascript experience: jQuery, unobtrusive javascript, and prototypal inheritance.
   \item Proficient with Java, including Apache Tomcat and Google Web Toolkit.
   \item Proficient with C++.
   \\
