Updated the rails resume

--- a/rails-resume.tex
+++ b/rails-resume.tex
@@ -7,8 +7,8 @@
 \author{Dmitry Ratnikov}
 \email{ratnikov@gmail.com}
 \phone{(312) 725 3905}
-\streetaddress{834 W Bradley Pl, Apt 1}
-\citystatezip{Chicago, IL 60613}
+\streetaddress{467 Troutmant St, \#2E}
+\citystatezip{Brooklyn, NY 11237}
 \maketitle
 
 \section{Education}
@@ -20,7 +20,9 @@
 
 \section{Work Experience}
 
-\affiliation{Web Developer at Webitects, Inc}{February 2008 - Present}
+\affiliation{Software Engineer at Google, Inc}{June 2010 - Present}
+
+\affiliation{Web Developer at Webitects, Inc}{February 2008 - April 2010}
 \begin{compactitem}
   \item Developer of my.seiu.org networking portal based on Community-Engine platform.
   \item Lead developer for communitycollab.org social networking portal with 500+ users.
