Updated google resume
Also included google resume in the makefile

--- a/google-resume.tex
+++ b/google-resume.tex
@@ -7,8 +7,8 @@
 \author{Dmitry Ratnikov}
 \email{ratnikov@gmail.com}
 \phone{(312) 725 3905}
-\streetaddress{834 W Bradley Pl, Apt 1}
-\citystatezip{Chicago, IL 60613}
+\streetaddress{467 Troutman St, \#2E}
+\citystatezip{Brooklyn, NY 11237}
 \maketitle
 
 \section{Skills}
@@ -29,7 +29,9 @@
 
 \section{Work Experience}
 
-\affiliation{Web Developer at Webitects, Inc}{February 2008 - Present}
+\affiliation{Software Engineer at Google, Inc}{June 2010 - Present}
+
+\affiliation{Web Developer at Webitects, Inc}{February 2008 - April 2010}
 \begin{compactitem}
   \item Co-developer for My.SEIU.org organizational portal.
   \item Lead developer for webitects.com, a CMS site with a built-in blog.
