Updated with new address and Google.
Had to cut stuff to make it fit one page

--- a/web-resume.tex
+++ b/web-resume.tex
@@ -7,8 +7,8 @@
 \author{Dmitry Ratnikov}
 \email{ratnikov@gmail.com}
 \phone{(312) 725 3905}
-\streetaddress{834 W Bradley Pl, Apt 1}
-\citystatezip{Chicago, IL 60613}
+\streetaddress{467 Troutman St, \#2E}
+\citystatezip{Brooklyn, NY 11237}
 \maketitle
 
 \section{Education}
@@ -20,13 +20,13 @@
 
 \section{Work Experience}
 
-\affiliation{Web Developer at Webitects, Inc}{February 2008 - Present}
+\affiliation{Software Engineer at Google Inc}{June 2010 - Present}
+
+\affiliation{Web Developer at Webitects, Inc}{February 2008 - April 2010}
 \begin{compactitem}
   \item Co-developer for My.SEIU.org organizational portal.
   \item Lead developer for webitects.com, a CMS site with a built-in blog.
   \item Lead developer for communitycollab.org social networking portal.
-  \item Maintained Subversion and Git code repositories.
-  \item Created a virtualized staging environment built on VirtualBox.
 \end{compactitem}
 
 \affiliation[(Internship)]{Fermilab Computing Division}{May 2006 - August 2007, May 2007 - August 2007}
@@ -77,8 +77,6 @@
 \begin{compactitem}
   \item Proficient using Git and Subversion.
   \item Used Sphinx to provide full text searching.
-  \item Long time Linux developer (Ubuntu, Archlinux, Redhat).
-  \item Member of IIT ICPC competition team for 4 years (Mid-Central USA region).
   \item 4 years Java experience; 7 years of C++ experience.
 \end{compactitem}
 
