Added information about projects, educations, etc

--- a/alex.tex
+++ b/alex.tex
@@ -11,29 +11,64 @@
 \citystatezip{Brooklyn, NY 11237}
 \maketitle
 
-\section{Overview}
-
-\subsection{}
-
-blah blah blah
-
 \section{Skills}
 
-\subsection{}
-
 \begin{compactitem}
-  \item Preparing experiment literary review.
-  \item Prepared and ran participants surveys.
-  \item Contributed to an APA style paper.
+  \item Skilled at preparing experiment literary review.
+  \item Experience running participant surveys.
+  \item Experience with experiment data entry.
+  \item Familiar with APA paper guidelines.
 \end{compactitem}
 
 \section{Experience}
 
-\affiliation{Schadenfeude}{}
+\affiliation{Non-compliance Research paper}{}
 \begin{compactitem}
-  \item this
-  \item that
+  \item Performed literary review of the topic.
+  \item Helped edit and made sure the paper conforms to the APA style.
 \end{compactitem}
-\skills{Literary review}
+
+\affiliation{Schadenfreude}{http://bit.ly/mOuakF}
+\begin{compactitem}
+  \item Created survey with input from other group members.
+  \item Performed and presented literary review of the project.
+  \item Performed survey data entry.
+\end{compactitem}
+
+\affiliation{Independent Study}{}
+\begin{compactitem}
+  \item Ran participant surveys.
+  \item Performed survey data entry.
+\end{compactitem}
+
+\section{Education}
+
+\subsection{Northern Illinois University}
+\affiliation{Bachelor of Arts in Psychology}{Graduated May 2011}
+
+\begin{compactitem}
+  \item Graduated with 3.33 GPA (3.48 in Psychology).
+  \item General GRE: Quantatative 800, Verbal 500, Analytical Writing 4.0.
+  \item Psychology Subject GRE: 85\%, Experimental: 89\%, Social: 80\%
+\end{compactitem}
+
+\subsection{College of DuPage}
+\begin{compactitem}
+  \item Philosophy club officer.
+\end{compactitem}
+
+\subsection{North Central College}
+\begin{compactitem}
+  \item German Club president.
+\end{compactitem}
+
+\section{Other Experience}
+
+\begin{compactitem}
+  \item Participated in 2010 Midwestern Psychological Association conference.
+  \item Participated in 2008 \& 2009 American Philosophical Association conference.
+  \item President of North Central College German club.
+  \item Officer of College of DuPage philosophy club.
+\end{compactitem}
 
 \end{document}
