Added sample objective

--- a/alex.tex
+++ b/alex.tex
@@ -11,6 +11,12 @@
 \citystatezip{Brooklyn, NY 11237}
 \maketitle
 
+\section{Objective}
+
+\subsection{}
+
+I want to have a perfect job and live on Bahamas.
+
 \section{Skills}
 
 \begin{compactitem}
